--- a/project-manager.html
+++ b/project-manager.html
@@ -40,12 +40,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://careers.jobscore.com/careers/volunteersofamericalosangeles/jobs/program-manager-ii-homeless-veteran-reintegration-project-asJfg--Z0r6AJzaKiznY58'>Program Manager II (Homeless Veteran Reintegration Project) #4191 job at Volunteers of America Los Angeles in Greater Los Angeles Area, CA, powered by JobScore</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nmr-consulting/job/oW5rbfwn'>NMR Consulting Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
+<h5><a href='https://careers.jobscore.com/careers/volunteersofamericalosangeles/jobs/program-manager-ii-homeless-veteran-reintegration-project-asJfg--Z0r6AJzaKiznY58'>Program Manager II (Homeless Veteran Reintegration Project) #4191 job at Volunteers of America Los Angeles in Greater Los Angeles Area, CA, powered by JobScore</a></h5> 
+<p><span class="badge badge-light">Los Angeles Los Angeles Los Angeles</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/enett/9e035b1f-0f5b-4b40-bfb5-9ed40815ef45'>eNett International - Business Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Melbourne Australia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/nealanalytics/jobs/4500321002'>Job Application for BI Project Manager at Neal Analytics</a></h5> 
@@ -60,7 +64,7 @@
 <p><span class="badge badge-light">Charlotte North Carolina</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/services/sr-project-manager-emea-1902704/?gh_src=82a8057f1'>Sr. Project Manager, EMEA | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/services/sr-project-manager-emea-1902704/?gh_src=82a8057f1'>Sr. Project Manager, EMEA | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -96,11 +100,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://ncianato.referrals.selectminds.com/jobs/senior-project-manager-cyber-security-761'>Senior Project Manager (Cyber Security) - NATO Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ncianato.referrals.selectminds.com/jobs/senior-project-manager-cyber-security-761'>Senior Project Manager (Cyber Security) - NATO Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/RPIConsultants/743999697986495-project-manager'>RPI Consultants Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/RPIConsultants/743999697986495-project-manager'>RPI Consultants Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -128,11 +132,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://tetratech.referrals.selectminds.com/jobs/senior-sustainability-project-manager-15788'>Senior Sustainability Project Manager - Tetra Tech Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tetratech.referrals.selectminds.com/jobs/senior-sustainability-project-manager-15788'>Senior Sustainability Project Manager - Tetra Tech Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://tetratech.referrals.selectminds.com/jobs/audio-visual-senior-engineer-project-manager-new-york-ny-office-15784'>Audio Visual Senior Engineer/Project Manager - New York, NY office - Tetra Tech Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tetratech.referrals.selectminds.com/jobs/audio-visual-senior-engineer-project-manager-new-york-ny-office-15784'>Audio Visual Senior Engineer/Project Manager - New York, NY office - Tetra Tech Careers</a></h5> 
 <p><span class="badge badge-light">New York, NY New York, NY United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -200,7 +204,7 @@
 <p><span class="badge badge-light">California California</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698515829-project-manager-automotive-service-solutions'>Bosch Group Project Manager Automotive Service Solutions | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698515829-project-manager-automotive-service-solutions'>Bosch Group Project Manager Automotive Service Solutions | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -278,7 +282,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.municipalworld.com/careers/project-manager-street-lighting-engineering-2/'>Project Manager, Street Lighting Engineering - City of Hamilton - Municipal World</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.municipalworld.com/careers/project-manager-street-lighting-engineering-2/'>Project Manager, Street Lighting Engineering - City of Hamilton - Municipal World</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -294,11 +298,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oi5iafwz&__jvst=Employee+Referral&__jvsd=s7sfDgwc&__jvsc=Twitter&bid=nQryoMwu'>Cirrus Logic Careers - Post Silicon Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oi5iafwz&__jvst=Employee+Referral&__jvsd=s7sfDgwc&__jvsc=Twitter&bid=nQryoMwu'>Cirrus Logic Careers - Post Silicon Project Manager</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.viget.com/careers/digital-project-manager/'>Digital Project Manager | Viget</a></h5> 
+<h5><a href='https://www.viget.com/careers/digital-project-manager/'>Digital Project Manager | Viget</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -306,7 +310,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/newengen/jobs/4500278002'>Job Application for Software Engineering Project Manager at New Engen</a></h5> 
+<h5><a href='https://boards.greenhouse.io/newengen/jobs/4500278002'>Job Application for Software Engineering Project Manager at New Engen</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -342,7 +346,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698473085-project-manager'>McFadyen Digital Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/McFadyenDigital/743999698473085-project-manager'>McFadyen Digital Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vienna North America</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -408,7 +412,7 @@
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698452492-senior-project-manager-m-w-d-commercial-hightech-manufacturing'>Turner & Townsend Senior Project Manager (m/w/d) - Commercial / Hightech & Manufacturing | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698452492-senior-project-manager-m-w-d-commercial-hightech-manufacturing'>Turner & Townsend Senior Project Manager (m/w/d) - Commercial / Hightech & Manufacturing | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">M?nchen, Deutschland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -428,7 +432,7 @@
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gojek/d1c57d40-162a-4f9e-814b-2391c95f0a3c'>Gojek - Senior Program Manager: Operations & Strategic Initiatives; People and Culture Team</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gojek/d1c57d40-162a-4f9e-814b-2391c95f0a3c'>Gojek - Senior Program Manager: Operations & Strategic Initiatives; People and Culture Team</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -439,10 +443,6 @@
 <h5><a href='https://jobs.smartrecruiters.com/CinqGroup/743999698420175-project-manager'>Cinq Group Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://www.cv-library.co.uk/job/211097786/Delivery-Residential-Project-Manager?s=100340&utm_source=dlvr.it&utm_medium=twitter'>Delivery Residential Project Manager | CV-Library.co.uk | 211097786</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-30</p>
 <hr/>
 
 
