--- a/product-manager.html
+++ b/product-manager.html
@@ -60,7 +60,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/product/senior-product-manager-mfa-platform-1677897/?gh_src=82a8057f1'>Senior Product Manager, MFA Platform | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/product/senior-product-manager-mfa-platform-1677897/?gh_src=82a8057f1'>Senior Product Manager, MFA Platform | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -124,7 +124,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698523615-senior-product-designer'>SmartRecruiters Inc Senior Product Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698523615-senior-product-designer'>SmartRecruiters Inc Senior Product Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -202,7 +202,7 @@
 <p><span class="badge badge-light">London  London  London London  London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=oPcsbfwo&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=ndJAoMwb'>Justice Digital and Technology Careers - Senior Product Manager, London</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=oPcsbfwo&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=ndJAoMwb'>Justice Digital and Technology Careers - Senior Product Manager, London</a></h5> 
 <p><span class="badge badge-light">London  London  London London  London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -228,7 +228,7 @@
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/25319-Product-Designer?source=twitter'>
+<h5><a href='https://dribbble.com/jobs/25319-Product-Designer?source=twitter'>
       Product Designer at Underbelly - Salt Lake City, Utah - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah</span></p>
@@ -244,7 +244,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/icapitalnetwork/jobs/4489628002'>Job Application for Product Manager at iCapital Network</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/icapitalnetwork/jobs/4489628002'>Job Application for Product Manager at iCapital Network</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -308,7 +308,7 @@
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698379550-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698379550-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -324,7 +324,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/recurly/2ce02412-eccb-46ad-b3a5-3fbc93c60b0a'>Recurly - Technical Data Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/recurly/2ce02412-eccb-46ad-b3a5-3fbc93c60b0a'>Recurly - Technical Data Product Manager</a></h5> 
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -376,7 +376,7 @@
 <p><span class="badge badge-light">Yerevan</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://producthire.net/job/product-manager-trust-safety/'>Product Manager - Trust &amp; Safety | PRODUCTHIRE.NET</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/product-manager-trust-safety/'>Product Manager - Trust &amp; Safety | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -400,7 +400,7 @@ position reports to: Sr Manager of Product Management, Platform BU.</p>
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/servicetitan/jobs/1933485'>Job Application for Product Designer, UX at ServiceTitan</a></h5> 
+<h5><a href='https://boards.greenhouse.io/servicetitan/jobs/1933485'>Job Application for Product Designer, UX at ServiceTitan</a></h5> 
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
