--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,24 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jellysmack.recruitee.com/l/fr/o/developpeur-fullstack-hf-cdi'>
+      D?veloppeur Full-Stack H/F - CDI - Jellysmack
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/TheUniversityOfAuckland/743999698533550-digital-developer-ms-net-full-stack'>The University of Auckland Digital Developer: MS.net - Full Stack | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Auckland New Zealand  Auckland Auckland</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/TheUniversityOfAuckland/743999698533519-senior-digital-developer-open-source-technologies-full-stack'>The University of Auckland Senior Digital Developer: Open Source Technologies - Full Stack | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Auckland New Zealand  Auckland Auckland</span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oSaOafwK&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=nfvbpMwB'>Cirrus Logic Careers - Full Stack Software Developer</a></h5> 
+<p><span class="badge badge-light">Austin, Texas</span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='https://www.okta.com/company/careers/ga/sr-staff-full-stack-developer-1814386/?gh_src=82a8057f1'>Sr./Staff Full Stack Developer | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
@@ -152,7 +170,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.hitachi.com/jobs/4691215-aws-full-stack-developer'>AWS Full Stack Developer in Chicago, IL - Hitachi</a></h5> 
+<h5><a href='https://careers.hitachi.com/jobs/4691215-aws-full-stack-developer'>AWS Full Stack Developer in Chicago, IL - Hitachi</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -244,7 +262,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SMARTWAVE/743999689314627-consultant-full-stack-junior'>SMARTWAVE Consultant Full stack Junior | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/SMARTWAVE/743999689314627-consultant-full-stack-junior'>SMARTWAVE Consultant Full stack Junior | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -264,7 +282,7 @@
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Xref3/743999698432477-mid-level-full-stack-developer'>XREF Mid-Level | Full stack Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Xref3/743999698432477-mid-level-full-stack-developer'>XREF Mid-Level | Full stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -343,7 +361,7 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p><span class="badge badge-light">Chicago, IL  Chicago</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/tenable-network-security/job/ov2rbfwT'>Tenable Careers - Senior Software Engineer - Full Stack</a></h5> 
+<h5><a href='http://jobs.jobvite.com/tenable-network-security/job/ov2rbfwT'>Tenable Careers - Senior Software Engineer - Full Stack</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -355,7 +373,7 @@ and team that will inspire you; A healthy and profitable company; The freedom to
 <p><span class="badge badge-light">Baltimore, MD</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twinelabs/jobs/4450909002'>Job Application for Full-Stack Engineer at Twine Labs</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twinelabs/jobs/4450909002'>Job Application for Full-Stack Engineer at Twine Labs</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -436,24 +454,8 @@ with experience using Python, Node js, Deep Learning, AWS, NoSQL, and SQL.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://stantec.referrals.selectminds.com/jobs/application-developer-full-stack.net-marketing-7018'>Application Developer (Full Stack.Net), Marketing - Stantec Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://stantec.referrals.selectminds.com/jobs/application-developer-full-stack.net-marketing-7018'>Application Developer (Full Stack.Net), Marketing - Stantec Careers</a></h5> 
 <p><span class="badge badge-light">Edmonton, Alberta Canada</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ohC3afwQ&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n2VDmMwd'>ServiceNow Careers - Senior Full Stack Engineer</a></h5> 
-<p><span class="badge badge-light">Santa Clara, California</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AmericanITStaff/743999698331625-java-full-stack-developer-with-microservices'>American IT Staff JAVA Full Stack Developer with Microservices | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Plano, TX</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ASIFR/743999698304910-stage-de-developpement-fullstack-java-h-f-'>ASI STAGE DE D?VELOPPEMENT FULLSTACK JAVA (H/F) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">France</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/hellooffice/4f50a433-d86b-4f1a-8f01-1e37bbd50c55'>HelloOffice - Full Stack Engineer</a></h5> 
-<p><span class="badge badge-light">San Francisco  San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
